--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,4 +44,7 @@ jobs:
           version_label: github-action-${{steps.current-time.outputs.formattedTime}}
           region: ap-northeast-2
           deployment_package: ./build/libs/${{env.artifact}}
+          wait_for_deployment: true
+          recovery_wait_time: 60 # 🔁 기존 30초보다 더 늘리기
+
   
